--- a/u3s4.html
+++ b/u3s4.html
@@ -198,7 +198,7 @@
 <li>You want to spray weed killer on the weeds by the curb near your house. You have a bottle of weed killer concentrate that must be mixed with water before spraying. The directions say to mix 6 fluid ounces of weed killer concentrate per gallon of water. You want to mix the weed killer in a 1-quart spray bottle. How many tablespoons of concentrate should you mix with a quart of water? (1 oz = 2 tbsp)</li>
 
 <p class="solution"> \(\begin{equation}
-    \frac{6 \text{ oz}}{1 \text{ gal}} \times \frac{1 \text{ gal}}{4 \text{ qts}} \times \frac{2 \text{ tbsp}}{1 \text{ oz}}=3 \text{ tsp/qt}
+    \frac{6 \text{ oz}}{1 \text{ gal}} \times \frac{1 \text{ gal}}{4 \text{ qts}} \times \frac{2 \text{ tbsp}}{1 \text{ oz}}=3 \text{ tbsp/qt}
     \end{equation} \)</p>
 
 <li>Which is the better buy: 27 double rolls of Scott bath tissue with 1000 sheets per roll (2829 square feet total) for $16.97 OR 24 double rolls of Walmart brand bath tissue with 1000 sheets per roll (2528 square feet total) for $12.52.</li>
