--- a/u1s2.html
+++ b/u1s2.html
@@ -214,7 +214,7 @@
           
         </li>
 
-        <li>Probability is the long-term chance that a certain outcome will occur from some random process.  What is the probability of a fair coin landing heads up when flipped?  What is the probability that a person rolls a 3 when rolling a fair die?  Write these probabilities as decimals and percentages.
+        <!-- <li>Probability is the long-term chance that a certain outcome will occur from some random process.  What is the probability of a fair coin landing heads up when flipped?  What is the probability that a person rolls a 3 when rolling a fair die?  Write these probabilities as decimals and percentages.
           <p>Probability of event A =\(\frac{\text{number of outcomes in event A}}{ \text{total number of events}} \)</p>
           <p class="solution"> \( P(heads)= \frac{1}{2}=0.5=50\%\)</p>
           <p class="solution"> \( P(3)= \frac{1}{6}=0.1667=16.67\%\)</p>
@@ -233,7 +233,7 @@
         <li>In the 2018-2019 regular season, NBA basketball player Steph Curry attempted 287 free throws and made 263 of them.  What is the probability that Steph Curry will make a free throw?  Write this probability as a fraction, as a decimal, and as a percentage.
             <p class="solution"> \( P(\text{Make})= \frac{263}{287}=0.9164=91.64\%\)</p>
          
-        </li>
+        </li> -->
 
         <li>Kingsport, TN has a population of 53,091 and had 2954 instances of violent and property crime in 2014.  Knoxville, TN has a population of 185,638 and had 12,863 instances of violent and property crime in 2014.  Which is the safer city?  How many crimes occurred per 100 people in each city?
             <p class="solution"> Kingsport: \(\frac{2954}{53091}=0.0556=5.56\%=\frac{5.56}{100}\)</p>
