--- a/u2s4.html
+++ b/u2s4.html
@@ -165,6 +165,7 @@
 <p>Samples are formed using self-selected volunteers like when a radio show asks for listeners to call in to complete a survey.</p>
 
 </ol>
+<p><b>SAMPLING BIAS: </b> A sampling method is biased if every member of the population does not have equal likelihood of being in the sample.</p>
 <p style="page-break-before: always"></p>
 <h4>TYPE OF STUDY: </h4>
 <ul>
@@ -192,9 +193,9 @@
 
 </ol>
 
-<p><b>SAMPLING BIAS: </b> A sampling method is biased if every member of the population does not have equal likelihood of being in the sample.</p>
 
-<p><b>SAMPLING VARIABILITY: </b> the natural variation of samples</p>
+
+<!-- <p><b>SAMPLING VARIABILITY: </b> the natural variation of samples</p> -->
 <p style="page-break-before: always"></p>
 <h3>Statistical Studies</h3>
 
@@ -266,20 +267,20 @@
 <p>Source: <a href="https://iop.harvard.edu/youth-poll/spring-2023-harvard-youth-poll-gun-safety-findings" target="_blank"> Harvard Kennedy School Institute of Politics</a></p>
 
 <p>Population</p>
-<p class="solution">18-29 year-olds</p>
+<inline class="solution">18-29 year-olds</inline>
 <p>Sample</p>
-<p class="solution">2069 18-29 years-olds</p>
+<inline class="solution">2069 18-29 years-olds</inline>
 <p>Sample Statistics</p>
-<p class="solution">63% believe gun laws should be stricter</p>
+<inline class="solution">63% believe gun laws should be stricter</inline>
 <p>Sampling Methods</p>
-<p class="solution">Stratified</p>
+<inline class="solution">Stratified</inline>
 
 <p>Type of Study</p>
-<p class="solution">Observational</p>
+<inline class="solution">Observational</inline>
 <p>Confidence Interval</p>
-<p class="solution">63%&#177;2.86% = 60.14%-65.86%</p>
+<inline class="solution">63%&#177;2.86% = 60.14%-65.86%</inline>
 
-
+<p style="page-break-before: always"></p>
 
 <h3>Calculating the Probability of an Event</h3>
 
@@ -345,8 +346,7 @@
 
 
 
-<br>
-<br>
+    <p style="page-break-before: always"></p>
 Pellissippi State Student Enrollment
 
 <br>
