--- a/u4review.html
+++ b/u4review.html
@@ -245,7 +245,7 @@
   <li>How many like fantasy or comedy?
     <p class="solution">78</p>
   </li>
-  <li>How many like comedy and romantic but not fantasy>
+  <li>How many like comedy and romantic but not fantasy?
     <p class="solution">25</p>
   </li>
 </ol></p>
