--- a/u2s4.html
+++ b/u2s4.html
@@ -233,7 +233,7 @@
 
 <p>“A new class of experimental cholesterol drugs might sharply reduce the risk of heart attacks and strokes, researchers reported on Sunday, citing what they described as preliminary evidence.”</p>
 
-<p>“The study of Amgen’s evolocumab involved 4,465 patients with various degrees of risk, two-thirds of whom were randomly chosen to get the drug in addition to the medication they were already taking. After one year, 0.95 percent of those in the group that received the drug had suffered a heart attack, stroke or other cardiovascular problem, compared with 2.18 percent in the group that did not take the drug. By a measure known as the hazard ratio, the risk of cardiovascular events was reduced by 53 percent.</p>
+<p>“The study of Amgen’s evolocumab involved 4,465 patients with various degrees of risk, two-thirds of whom were randomly chosen to get the drug in addition to the medication they were already taking. After one year, 0.95 percent of those in the group that received the drug had suffered a heart attack, stroke or other cardiovascular problem, compared with 2.18 percent in the group that did not take the drug. By a measure known as the hazard ratio, the risk of cardiovascular events was reduced by 53 percent. The margin of error for the study was +/- 2.3%</p>
 
 
 
@@ -253,6 +253,8 @@
 <p class="solution">Voluntary response</p>
 <p>Type of Study</p>
 <p class="solution">Experimental</p>
+<p>Find the confidence interval for the reduced risk of experiencing a cardiovascular problem.</p>
+<p class="solution">53% +/-2.3% = 50.7% - 55.3%</p>
 <p style="page-break-before: always"></p>
 <p><b>Harvard Youth Poll</b></p>
 
