--- a/u2s8.html
+++ b/u2s8.html
@@ -155,7 +155,7 @@
 
 
     <p style="page-break-before: always"></p>
-      <h4>The World's Highest-Paid Athletes 2022</h4>
+      <h4>The World's Highest-Paid Athletes 2023</h4>
      
       <style type="text/css">
         .tg  {border-collapse:collapse;border-spacing:0;}
@@ -163,174 +163,182 @@
         .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
         .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
         </style>
-        <table summary="World's highest paid athletes 2022.  Column headers are rank, name, total pay, salary/winnings, endorsements, and sport.  Row headings are rank." class="tg">
+        <table summary="World's highest paid athletes 2023.  Column headers are rank, name, total pay, salary/winnings, endorsements, and sport.  Row headings are rank." class="tg">
           <tr>
             <th class="tg-13pz"scope="row">Rank</th>
             <th class="tg-13pz" scope="row">Name</th>
-            <th class="tg-13pz" scope="row">Total Pay</th>
-            <th class="tg-13pz" scope="row">On-the-Field Earnings</th>
+            <th class="tg-13pz" scope="row">Total Earnings</th>
+            <th class="tg-13pz" scope="row">Salary/Winnings</th>
             <th class="tg-13pz" scope="row">Off-the-Field Earnings</th>
             <th class="tg-13pz" scope="row">Sport</th>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#1</th>
-            <td class="tg-13pz">Lionel Messi</td>
-            <td class="tg-13pz">$130 M</td>
-            <td class="tg-13pz">$75 M</td>
-            <td class="tg-13pz">$55 M</td>
+            <td class="tg-13pz">Christiano Ronaldo </td>
+            <td class="tg-13pz">$275 M</td>
+            <td class="tg-13pz">$215 M</td>
+            <td class="tg-13pz">$60 M</td>
             <td class="tg-13pz">Soccer</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#2</th>
-            <td class="tg-13pz"> LeBron James</td>
-            <td class="tg-13pz">$121.2 M</td>
-            <td class="tg-13pz">$41.2 M</td>
+            <td class="tg-13pz"> Jon Rahm</td>
+            <td class="tg-13pz">$203 M</td>
+            <td class="tg-13pz">$181 M</td>
 
-            <td class="tg-13pz">$80 M</td>
+            <td class="tg-13pz">$22 M</td>
 
-            <td class="tg-13pz">Basketball</td>
+            <td class="tg-13pz">Golf</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#3</th>
-            <td class="tg-13pz">Cristiano Ronaldo</td>
-            <td class="tg-13pz">$115 M</td>
-            <td class="tg-13pz">$60 M</td>
-            <td class="tg-13pz">$55 M</td>
+            <td class="tg-13pz">Lionel Messi</td>
+            <td class="tg-13pz">$130 M</td>
+            <td class="tg-13pz">$65 M</td>
+            <td class="tg-13pz">$65 M</td>
             <td class="tg-13pz">Soccer</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#4</th>
-            <td class="tg-13pz">Neymar</td>
-            <td class="tg-13pz">$95 M</td>
-            <td class="tg-13pz">$70 M</td>
+            <td class="tg-13pz">Lebron James</td>
+            <td class="tg-13pz">$125.7 M</td>
+            <td class="tg-13pz">$45.7 M</td>
+            <td class="tg-13pz">$80 M</td>
+            <td class="tg-13pz">Basketball</td>
+          </tr>
+          <tr>
+            <th class="tg-13pz" scope="row">#5</th>
+            <td class="tg-13pz">Kyliam Mbappe</td>
+            <td class="tg-13pz">$125M</td>
+            <td class="tg-13pz">$100 M</td>
             <td class="tg-13pz">$25 M</td>
             <td class="tg-13pz">Soccer</td>
           </tr>
           <tr>
-            <th class="tg-13pz" scope="row">#5</th>
-            <td class="tg-13pz">Stephen Curry</td>
-            <td class="tg-13pz">$92.8 M</td>
-            <td class="tg-13pz">$45.8 M</td>
-            <td class="tg-13pz">$47 M</td>
-            <td class="tg-13pz">Basketball</td>
+            <th class="tg-13pz" scope="row">#6</th>
+            <td class="tg-13pz">Neymar</td>
+            <td class="tg-13pz">$121 M</td>
+            <td class="tg-13pz">$86 M</td>
+            <td class="tg-13pz">$35 M</td>
+            <td class="tg-13pz">Soccer</td>
           </tr>
           <tr>
-            <th class="tg-13pz" scope="row">#6</th>
-            <td class="tg-13pz">Kevin Durant</td>
-            <td class="tg-13pz">$92.1 M</td>
-            <td class="tg-13pz">$42.1 M</td>
+            <th class="tg-13pz" scope="row">#7</th>
+            <td class="tg-13pz">Stephen Curry</td>
+            <td class="tg-13pz">$98.9 M</td>
+            <td class="tg-13pz">$48.9 M</td>
             <td class="tg-13pz">$50 M</td>
             <td class="tg-13pz">Basketball</td>
           </tr>
           <tr>
-            <th class="tg-13pz" scope="row">#7</th>
-            <td class="tg-13pz">  Roger Federer</td>
-            <td class="tg-13pz">$90.7 M</td>
-            <td class="tg-13pz">$0.7 M</td>
-            <td class="tg-13pz">$90 M</td>
-            <td class="tg-13pz">Tennis</td>
-          </tr>
-          <tr>
             <th class="tg-13pz" scope="row">#8</th>
-            <td class="tg-13pz"> Canelo Alvarez</td>
-            <td class="tg-13pz">$90 M</td>
-            <td class="tg-13pz">$85 M</td>
-            <td class="tg-13pz">$5 M</td>
-            <td class="tg-13pz">Boxing</td>
+            <td class="tg-13pz"> Giannis Antetokounmpo</td>
+            <td class="tg-13pz">$88.4 M</td>
+            <td class="tg-13pz">$43.4 M</td>
+            <td class="tg-13pz">$45 M</td>
+            <td class="tg-13pz">Basketball</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#9</th>
-            <td class="tg-13pz"> Tom Brady</td>
-            <td class="tg-13pz">$83.9 M</td>
-            <td class="tg-13pz">$31.9 M</td>
-            <td class="tg-13pz">$52 M</td>
-            <td class="tg-13pz">Football</td>
+            <td class="tg-13pz"> Kevin Durant</td>
+            <td class="tg-13pz">$86.9 M</td>
+            <td class="tg-13pz">$44.9 M</td>
+            <td class="tg-13pz">$42 M</td>
+            <td class="tg-13pz">Basketball</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#10</th>
-            <td class="tg-13pz"> Giannis Antetokounmpo</td>
-            <td class="tg-13pz">$80.9 M</td>
-            <td class="tg-13pz">$39.9 M</td>
-            <td class="tg-13pz">$41 M</td>
-            <td class="tg-13pz">Basketball</td>
+            <td class="tg-13pz"> Patrick Mahomes</td>
+            <td class="tg-13pz">$84.3 M</td>
+            <td class="tg-13pz">$59.3 M</td>
+            <td class="tg-13pz">$25 M</td>
+            <td class="tg-13pz">Football</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#11</th>
-            <td class="tg-13pz"> Russell Westbrook</td>
-            <td class="tg-13pz">$79.2 M</td>
-            <td class="tg-13pz">$44.2 M</td>
-            <td class="tg-13pz">$35 M</td>
-            <td class="tg-13pz">Basketball</td>
-          </tr>
-          <tr>
-            <th class="tg-13pz" scope="row">#12</th>
-            <td class="tg-13pz"> James Harden</td>
-            <td class="tg-13pz">$74.4 M</td>
-            <td class="tg-13pz">$44.4 M</td>
-            <td class="tg-13pz">$30 M</td>
-            <td class="tg-13pz">Basketball</td>
-          </tr>
-          <tr>
-            <th class="tg-13pz" scope="row">#13</th>
-            <td class="tg-13pz"> Matthew Stafford</td>
-            <td class="tg-13pz">$72.3 M</td>
-            <td class="tg-13pz">$69.8 M</td>
+            <td class="tg-13pz"> Lamar Jackson</td>
+            <td class="tg-13pz">$82.5 M</td>
+            <td class="tg-13pz">$80 M</td>
             <td class="tg-13pz">$2.5 M</td>
             <td class="tg-13pz">Football</td>
           </tr>
           <tr>
+            <th class="tg-13pz" scope="row">#12</th>
+            <td class="tg-13pz"> Karim Benzema</td>
+            <td class="tg-13pz">$78 M</td>
+            <td class="tg-13pz">$70 M</td>
+            <td class="tg-13pz">$8 M</td>
+            <td class="tg-13pz">Soccer</td>
+          </tr>
+          <tr>
+            <th class="tg-13pz" scope="row">#13</th>
+            <td class="tg-13pz"> Rory McIlroy</td>
+            <td class="tg-13pz">$77.4 M</td>
+            <td class="tg-13pz">$37.4 M</td>
+            <td class="tg-13pz">$40 M</td>
+            <td class="tg-13pz">Golf</td>
+          </tr>
+          <tr>
             <th class="tg-13pz" scope="row">#14</th>
-            <td class="tg-13pz">Aaron Rodgers</td>
-            <td class="tg-13pz">$68 M</td>
-            <td class="tg-13pz">$57 M</td>
-            <td class="tg-13pz">$11 M</td>
-            <td class="tg-13pz">Football</td>
+            <td class="tg-13pz">Tiger Woods</td>
+            <td class="tg-13pz">$77.2 M</td>
+            <td class="tg-13pz">$12.2 M</td>
+            <td class="tg-13pz">$65 M</td>
+            <td class="tg-13pz">Golf</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#15</th>
-            <td class="tg-13pz">  Tiger Woods</td>
-            <td class="tg-13pz">$68 M</td>
-            <td class="tg-13pz">$0.04 M</td>
-            <td class="tg-13pz">$68 M</td>
-            <td class="tg-13pz">Golf</td>
+            <td class="tg-13pz"> Max Verstappen</td>
+            <td class="tg-13pz">$75 M</td>
+            <td class="tg-13pz">$70 M</td>
+            <td class="tg-13pz">$5 M</td>
+            <td class="tg-13pz">Car Racing</td>
+          </tr>
+          <tr>
+            <th class="tg-13pz" scope="row">#16</th>
+            <td class="tg-13pz"> Shohei Ohtani</td>
+            <td class="tg-13pz">$70 M</td>
+            <td class="tg-13pz">$30 M</td>
+            <td class="tg-13pz">$40 M</td>
+            <td class="tg-13pz">Baseball</td>
           </tr>
         </table>
-<p>Source <a href="https://www.forbes.com/athletes/" target="_blank">Highest Paid Athletes List From Forbes</a> </p>
+<p>Source <a href="https://www.sportico.com/feature/highest-paid-athletes-in-the-world-1234765608/" target="_blank">Sportico</a> </p>
 
 
 
-<p><b>TOTAL PAY</b></p>
+<p><b>TOTAL EARNINGS</b></p>
 <p>Mean:</p>
 
-<p class="solution">$90.23 M</p>
+<p class="solution">$112.39 M</p>
 <p>Median:</p>
-<p class="solution">$90 M</p>
+<p class="solution">$87.65 M</p>
 <p>Mode:</p>
-<p class="solution">68</p>
+<p class="solution">No mode</p>
 <p>Range:</p>
-<p class="solution">$62 M</p>
+<p class="solution">$205 M</p>
 
 
 
 
 <p><b>Quartiles</b></p>
 <p>Low (Min):</p>
-<p class="solution">$68 M</p>
+<p class="solution">$70 M</p>
 <p>Lower Quartile:</p>
-<p class="solution">$74.4 M</p>
+<p class="solution">$77.7 M</p>
 <p>Median:</p>
-<p class="solution">$90 M</p>
+<p class="solution">$87.65 M</p>
 <p>Upper Quartile:</p>
-<p class="solution">$95</p>
+<p class="solution">$125.35</p>
 <p>High (Max):</p>
-<p class="solution">$130 M</p>
+<p class="solution">$275 M</p>
 
 <p><b>BOXPLOT</b></p>
 <p class="solution"> <img src="images/u2s8p1.png"  alt="The title of the box plot is Total Pay. The x-axis on the box plot is numbered from 0 to 130 and counting by 5. the left whisker is at 68, the minimum number, and the right whisker is at 130, the maximum number. The box that is drawn contains the lower quartile at 76.8, the median at 90 and the upper quartile at 93.9." ></p>
 
 
 <p>Standard Deviation:</p>
-<p class="solution">$18.89 M</p>
+<p class="solution">$54.96 M</p>
 
 
 
