--- a/u2s8.html
+++ b/u2s8.html
@@ -169,7 +169,7 @@
             <th class="tg-13pz" scope="row">Name</th>
             <th class="tg-13pz" scope="row">Total Earnings</th>
             <th class="tg-13pz" scope="row">Salary/Winnings</th>
-            <th class="tg-13pz" scope="row">Off-the-Field Earnings</th>
+            <th class="tg-13pz" scope="row">Endorsements</th>
             <th class="tg-13pz" scope="row">Sport</th>
           </tr>
           <tr>
@@ -334,7 +334,7 @@
 <p class="solution">$275 M</p>
 
 <p><b>BOXPLOT</b></p>
-<p class="solution"> <img src="images/u2s8p1.png"  alt="The title of the box plot is Total Pay. The x-axis on the box plot is numbered from 0 to 130 and counting by 5. the left whisker is at 68, the minimum number, and the right whisker is at 130, the maximum number. The box that is drawn contains the lower quartile at 76.8, the median at 90 and the upper quartile at 93.9." ></p>
+<p class="solution"> <img src="images/u2s8p1.png"  alt="The title of the box plot is Total Earnings. The x-axis on the box plot is numbered from 60 to 280, counting by 20, and labeled Millions of Dollars. The left whisker is at 70, the minimum number, and the right whisker is at 275, the maximum number. The box that is drawn contains the lower quartile at 77.7, the median at 87.65 and the upper quartile at 125.35." ></p>
 
 
 <p>Standard Deviation:</p>
@@ -345,34 +345,34 @@
 <p style="page-break-before: always"></p>
 
 
-<p><b>OFF-THE-FIELD EARNINGS</b></p>
+<p><ENDORSEMENTS</b></p>
 
 <p>Mean:</p>
-<p class="solution">$43.1 M</p>
+<p class="solution">$38.1 M</p>
 <p>Median:</p>
-<p class="solution">$47 M</p>
+<p class="solution">$40 M</p>
 <p>Mode:</p>
-<p class="solution">$55 M</p>
+<p class="solution">$25, 40, 65 M</p>
 <p>Range:</p>
-<p class="solution">$87.5 M</p>
+<p class="solution">$77.5 M</p>
 
 <p><b>Quartiles</b></p>
 <p>Low (Min):</p>
 <p class="solution">$2.5 M</p>
 <p>Lower Quartile:</p>
-<p class="solution">$25 M</p>
+<p class="solution">$23.5 M</p>
 <p>Median:</p>
-<p class="solution">$47 M</p>
+<p class="solution">$40 M</p>
 <p>Upper Quartile:</p>
 <p class="solution">$55 M</p>
 <p>High (Max):</p>
-<p class="solution">$90 M</p>
+<p class="solution">$80 M</p>
 
 <p><b>BOXPLOT</b></p>
 <p class="solution"><img src="images/u2s8p2.png" width="40%" height="40%" alt="The box plot is titled Off-the-field Earnings. The x-axis is in millions of dollars and goes from 0 to 95, counting by 5. The left whisker is at 2.5, the minimum number, and the right whisker is at 90, the maximum number. The box that is drawn contains the lower quartile at 25, the median at 47 and the upper quartile at 55." ></p>
 
 <p>Standard Deviation and Range Rule of Thumb for Standard Deviation:</p>
-<p class="solution">$25.78 M and $21.88 M</p>
+<p class="solution">$22.8 M and $19.4 M</p>
 
 
 
