--- a/u3s4.html
+++ b/u3s4.html
@@ -174,7 +174,7 @@
 <ol>
 <li>You plan to go to Myrtle Beach during spring break with two of your friends. It’s 412 miles to the beach from Knoxville. You will be driving a Honda CR-V which averages 28 miles per gallon on the highway. Gas prices are currently $2.15 per gallon. How much should you budget for gasoline on the trip if you split the cost equally with your friends?</li>
 
-<p class="solution"> \( \begin{equation} \frac{824 \text{ mi}}{1 \text{ trip}} \times \frac{1 \text{ trip}}{3 \text{ friends}} \times \frac{1 \text{ gal}}{28 \text{ mi}} \times \frac{\$ 2.15}{1 \text{ gal}}= \$ 20.11 \text{ per friend} \end{equation} \)</p>
+<p class="solution"> \( \begin{equation} \frac{824 \text{ mi}}{1 \text{ trip}} \times \frac{1 \text{ trip}}{3 \text{ friends}} \times \frac{1 \text{ gal}}{28 \text{ mi}} \times \frac{\$ 2.15}{1 \text{ gal}}= \$ 21.09 \text{ per friend} \end{equation} \)</p>
 
 <li>Your bathtub measures 5 feet by 2 feet by 1.25 feet. The flow rate of water through your bathtub spout is 4 gallons per minute. How long will it take to fill your bathtub ¾ of the way to the top?</li>
 <p class="solution">\(V=lwh\)</p>
@@ -276,7 +276,7 @@
   <li>You find 13,406,190 pennies. If each penny weights 4 grams, how much did the money weigh in pounds?
 
     <p class="solution">\(\begin{equation}
-      \frac{13,406,190 \text{ miles}}{} \times \frac{4 \text { grams }}{1 \text{ penny}}\times \frac{1 \text { kg}}{1000 \text { grams }}\times \frac{2.2 \text { lbs}}{1 \text { kg }}=117,974.47 \text{ lbs}
+      \frac{13,406,190 \text{pennies}}{} \times \frac{4 \text { grams }}{1 \text{ penny}}\times \frac{1 \text { kg}}{1000 \text { grams }}\times \frac{2.2 \text { lbs}}{1 \text { kg }}=117,974.47 \text{ lbs}
       \end{equation} \)</p>
   </li>
 </ol>
