--- a/u3s5.html
+++ b/u3s5.html
@@ -168,14 +168,14 @@
           <td class="tg-s268" ><br><br><p class="solution"> \(\begin{equation}
             A=L W
             \end{equation} \)</p> <p class="solution">\(\begin{equation}
-              A=26 \cdot 10.5
+              A=26 \text{ft} \cdot 10.5 \text{ft}
               \end{equation}\)</p> <p class="solution">\(\begin{equation}
                 A=273 \text{ ft}^{2}
                 \end{equation}\)</p><br><br></td>
           <td class="tg-s268"><p class="solution"> \(\begin{equation}
             A= \frac{1}{2}bh
             \end{equation} \)</p> <p class="solution"> \(\begin{equation}
-              A=\frac{1}{2} \cdot 26 \cdot 4.75
+              A=\frac{1}{2} \cdot 26 \text{ft} \cdot 4.75 \text{ft}
               \end{equation} \)</p> <p class="solution"> \(\begin{equation}
                 A=61.75 \text{ ft}^{2}
                 \end{equation} \)</p></td>
@@ -183,7 +183,7 @@
             <p class="solution">\(\begin{equation}
               A=L W
               \end{equation}\)</p> <p class="solution">\(\begin{equation}
-                A=16 \cdot 7
+                A=16 \text{ft} \cdot 7 \text{ft}
                 \end{equation}\)</p> <p class="solution">\(\begin{equation}
                   A=112 \text{ ft} ^{2}
                   \end{equation}\)</p>
@@ -191,7 +191,7 @@
         </tr>
         <tr>
           <th class="tg-s268" colspan="3" cope="col">Area to be painted = Area of rectangle + Area of triangle - Area of door<br> <p class="solution">\begin{equation}
-            273+61.75-112=222.75
+            273 \text{ ft}^{2}+61.75 \text{ ft}^{2}-112 \text{ ft}^{2}=222.75 \text{ ft}^{2}
             \end{equation}</p><br></th>
         </tr>
         <tr>
@@ -225,21 +225,21 @@
 <li>Your backyard currently has no grass. You want to seed your backyard and enclose it with a fence for your dog.
 <ol>
     <li>Determine the perimeter of your backyard.</li>
-    <p class="solution">\(24+12+9+9+15+21=90 ft\)</p>
+    <p class="solution">\(28+70+60+30=188 ft\)</p>
   
 
-    <img src="images/u3s5p2a.png" alt="The backyard is formed by a larger rectangle on top of a smaller rectangle. The larger rectangle on the top has a length of 24 feet and a width of 12 feet. The smaller rectangle on the bottom is attached all the way to the left of the top rectangle and has a length of 15 feet and a width of 9 feet.">
+    <img src="images/u3s5p2a.png" alt="The backyard is formed by a larger rectangle on top of a smaller rectangle. The larger rectangle on the top has a length of 70 feet and a width of 28 feet. The smaller rectangle on the bottom is attached all the way to the left of the top rectangle and has a length of 32 feet and a width of 30 feet.">
     <li>If chain link fencing costs $14 per foot installed, how much will it cost to enclose your backyard?</li>
 
-<p class="solution">\(90 \times 14 = $1260\)</p>
+<p class="solution">\(188 \times 14 = $2632\)</p>
 
     <li>Determine the area of your backyard.</li>
 
-<p class="solution">\(24 \times 12 + 15 \times 9 = 423\; ft^2\)</p>
+<p class="solution">\(70 \times 28 + 30 \times 30 = 2920\; ft^2\)</p>
 
     <li>If the cost of Kentucky blue grass seed is $0.03 for 1 square foot, how much will the seed for the backyard cost?</li>
 
-    <p class="solution">\(423 \times 0.03 = $12.69\)</p>
+    <p class="solution">\(2920 \times 0.03 = $87.60\)</p>
     
 </ol> </li>
 
