--- a/u4s3.html
+++ b/u4s3.html
@@ -182,6 +182,9 @@
     <p class="solution">262 million</p>
     <li>The actual number of people in the U.S. with health insurance in 2014 was about 276 million.  Why do you think this differs from your estimate in question (e)?</li>
     <p class="solution">The function is probably not a linear relationship or the actual number could reflect that the Affordable Care Act was enacted in 2013.</p>
+    <li>Write the equation of the line for the number of people in the US with health insurance with respect to time in years.
+      <p class="solution">\(y=2x+212\)</p>
+    </li>
 </ol>
 </li>
 <li>Use the graph “Josh’s Car Trip” to answer the following questions.
@@ -198,6 +201,9 @@
   <p class="solution">40 mph</p>
   <li>At this rate, how long would it take Josh to complete a 3300 miles trek across the United States?  If he could only drive 8 hours a day, how many days would it take him?</li>
   <p class="solution">82.5 hours which is 10.3 days when he is driving 8 hours per day.</p>
+  <li>Write the equation of the line for distance Josh is from home with respect to time in hours.
+    <p class="solution">\(y=-40x+160\)</p>
+  </li>
 </ol>
 
 <p style="page-break-before: always"></p>
@@ -220,7 +226,9 @@
 <p class="solution">Selling the product for $200 brings in the most money.</p>
 <li>At what cost does the demand hit zero?</li>
 <p class="solution">$350</p>
-
+<li>Write the equation of the line for the number of units sold with respect to cost in dollars.
+  <p class="solution">\(y=-200x+70,000\)</p>
+</li>
 </ol>
 
 </li>
