--- a/u4s6.html
+++ b/u4s6.html
@@ -314,7 +314,7 @@ misrepresents someone’s argument to make it easier to attack</p>
             <p class="solution"> Reasonable argument.
                 Each side has a different opinion on how best to spend the money in the school budget.</p>
             </li>
-        <li>You shouldn’t procrastinate when it comes to completing your homework assignments and projects.  If you wait until the last minute you won’t have time to ask questions in the tutoring center or your instructor’s office.  Then you’ll have to miss some problems or leave them blank.  That would affect both your grade and your learning.
+        <li>Some students procrastinate when it comes to completing their homework assignments and projects.  If they wait until the last minute they may not have time to ask questions in the tutoring center or their instructor’s office.  Then they might have to miss some problems or leave them blank.  That could affect both their grade and learning.
             <p class="solution"> Reasonable argument.
                 The speaker is stating realistic ramifications of procrastinating on homework.</p>
         </li>
