--- a/u1s3.html
+++ b/u1s3.html
@@ -309,7 +309,7 @@
                             <p class="solution">\(=20\text{ gallons per week}\)</p></td>
                         </tr>
                         <tr>
-                          <th class="tg-13pz" scope="row">Gasoline for 5 years</th>
+                          <th class="tg-13pz" scope="row">Total Cost of Gasoline for 5 years</th>
                           <td class="tg-13pz"><p class="solution">\(6.86 \cdot 52 \cdot 5 \cdot $3.09 = 5511.32\)</p></td>
                           <td class="tg-13pz"><p class="solution">\(20 \cdot 52 \cdot 5 \cdot $3.09 = 16,068\)</p></td>
                         </tr>
