--- a/u4review.html
+++ b/u4review.html
@@ -229,13 +229,22 @@
 <p style="page-break-before: always"></p>
 
 <li>Draw a Venn diagram to represent the following information: A survey asked 100 people what kind of movies they like to watch.  The results:
-  53 like comedies
-  50 like fantasy movies
-  60 like romantic movies
-  25 like comedy and fantasy
-  28 like romantic and fantasy
-  30 like comedy and romantic
-  5 like all three
+  <ul>
+ <li> 53 like comedies</li>
+ <li>50 like fantasy movies</li>
+ <li> 60 like romantic movies</li>
+ <li> 25 like comedy and fantasy</li>
+ <li> 28 like romantic and fantasy</li>
+ <li>30 like comedy and romantic</li>
+ <li> 5 like all three</li>
+ 
+  
+ 
+ 
+ 
+  
+ 
+  </ul>
 
 <p class="solution"><img src="images/Vennk.png" alt="A Venn Diagram with three intersecting circles.  The top circle is labeled Comedies.  The bottom left is labeled Fantasy, and the bottom right is labeled Romantic.  The intersection of the 3 circles in the middle has 5 in it.  The intersection of only romantic and fantasy has 23, only fantasy and comedies has 20 and only comedies and romantic has 25.  The parts of the diagram with no intersection have 7 for romantic, 2 for fantasy, and 3 for comedies.  There are 15 outside the diagram."></p>
 <ol>
