--- a/u4s3.html
+++ b/u4s3.html
@@ -176,7 +176,10 @@
     <p class="solution">216 million</p>
     <li>At what rate is the number of people with health insurance increasing each year?</li>
     <p class="solution">2 million per year</p>
-    <li>According to the graph, how many people would you expect to have had health insurance in 1988?</li>
+    <li>Find the equation of the line for the number of people with health insurance since 1989.
+      <p class="solution">y=2x+212</p>
+    </li>
+    <li>How many people would you expect to have had health insurance in 1988?</li>
     <p class="solution">210 million</p>
     <li>According to the graph, how many people would you expect to have had health insurance in 2014?</li>
     <p class="solution">262 million</p>
