--- a/u3s5.html
+++ b/u3s5.html
@@ -211,31 +211,34 @@
     <p class="solution">You need to purchase 3 quarts of paint.</p>
 
 
-<li>One quart of paint costs $11.64. How much is the total cost of the paint that you need to buy?</li>
+<li>One quart of paint costs $27.98. How much is the total cost of the paint that you need to buy?</li>
 
-<p class="solution">\($11.64 \times 3 = $34.92\)</p>
+<p class="solution">\($27.98 \times 3 = $83.94\)</p>
 
 <li>The tax rate in Knoxville is 9.25%. How much is the total cost including taxes?</li>
 
-<p class="solution">\($34.92 \times 0.0925 = $3.23\)</p>
-<p class="solution">\($34.92 + $3.23 = $38.15\)</p>
+<p class="solution">\($83.94 \times 0.0925 = $7.76\)</p>
+<p class="solution">\($83.94 + $7.76 = $91.70\)</p>
 
 
 </ol> </li>
 <li>Your backyard currently has no grass. You want to seed your backyard and enclose it with a fence for your dog.
 <ol>
     <li>Determine the perimeter of your backyard.</li>
-    <p class="solution">\(28+70+60+30=188 ft\)</p>
+    <p class="solution">\(28+70+60+30+32+40=260 ft\)</p>
   
 
     <img src="images/u3s5p2a.png" alt="The backyard is formed by a larger rectangle on top of a smaller rectangle. The larger rectangle on the top has a length of 70 feet and a width of 28 feet. The smaller rectangle on the bottom is attached all the way to the left of the top rectangle and has a length of 32 feet and a width of 30 feet.">
-    <li>If chain link fencing costs $14 per foot installed, how much will it cost to enclose your backyard?</li>
 
-<p class="solution">\(188 \times 14 = $2632\)</p>
+    <li>Hou much fencing will you need to enclose your backyard?</li>
+    <p class="solution">\(28+70+60+30=188 ft\)</p>
+    <li>If chain link fencing costs $20 per foot installed, how much will it cost to enclose your backyard?</li>
+
+<p class="solution">\(188 \times 20 = $3760\)</p>
 
     <li>Determine the area of your backyard.</li>
 
-<p class="solution">\(70 \times 28 + 30 \times 30 = 2920\; ft^2\)</p>
+<p class="solution">\(70 \times 28 + 30 \times 32 = 2920\; ft^2\)</p>
 
     <li>If the cost of Kentucky blue grass seed is $0.03 for 1 square foot, how much will the seed for the backyard cost?</li>
 
