--- a/u2s8.html
+++ b/u2s8.html
@@ -324,11 +324,11 @@
 <p><b>Quartiles</b></p>
 <p>Low (Min):</p>
 <p class="solution">$70 M</p>
-<p>Lower Quartile:</p>
+<p>Lower Quartile (Q<sub>1</sub>):</p>
 <p class="solution">$77.7 M</p>
-<p>Median:</p>
+<p>Median (Q<sub>2</sub>):</p>
 <p class="solution">$87.65 M</p>
-<p>Upper Quartile:</p>
+<p>Upper Quartile (Q<sub>3</sub>):</p>
 <p class="solution">$125.35</p>
 <p>High (Max):</p>
 <p class="solution">$275 M</p>
@@ -359,11 +359,11 @@
 <p><b>Quartiles</b></p>
 <p>Low (Min):</p>
 <p class="solution">$2.5 M</p>
-<p>Lower Quartile:</p>
+<p>Lower Quartile (Q<sub>1</sub>):</p>
 <p class="solution">$23.5 M</p>
-<p>Median:</p>
+<p>Median (Q<sub>2</sub>):</p>
 <p class="solution">$40 M</p>
-<p>Upper Quartile:</p>
+<p>Upper Quartile (Q<sub>3</sub>):</p>
 <p class="solution">$55 M</p>
 <p>High (Max):</p>
 <p class="solution">$80 M</p>
@@ -371,8 +371,8 @@
 <p><b>BOXPLOT</b></p>
 <p class="solution"><img src="images/u2s8p2.png" width="40%" height="40%" alt="The box plot is titled Off-the-field Earnings. The x-axis is in millions of dollars and goes from 0 to 95, counting by 5. The left whisker is at 2.5, the minimum number, and the right whisker is at 90, the maximum number. The box that is drawn contains the lower quartile at 25, the median at 47 and the upper quartile at 55." ></p>
 
-<p>Standard Deviation and Range Rule of Thumb for Standard Deviation:</p>
-<p class="solution">$22.8 M and $19.4 M</p>
+<p>Standard Deviation:</p>
+<p class="solution">$22.8 M</p>
 
 
 
