--- a/u2s10.html
+++ b/u2s10.html
@@ -233,6 +233,33 @@
 
 </li>
 
+
+<p style="page-break-before: always"></p>
+
+
+<li>The average time a college student is on social media each week is normally distributed with a mean of 32 hours and a standard deviation of 5 hours.
+<p>Sketch a distribution curve and label.</p>
+<p class="solution"><img src="images/u2s10p3.png" alt="The graph is a bell-shaped curve. The x-axis is labeled with the mean in the middle, the highest point of the curve. Three standard deviations to the left and three standard deviations to the right are labeled on the x-axis. So, the x-axis contains 17, 22, 27, 32, 37, 42, 47."></p>
+
+<ol>
+<li>What percentage of college students spend more than 37 hours on social media each week?</li>
+<p class="solution">16%</p>
+<li>What percentage of college students spend less than 32 hours a week on social media?</li>
+<p class="solution">50%</p>
+<li>What percentage of students spend between 27 and 42 hours a week on social media?</li>
+<p class="solution">81.5%</p>
+<li>The range in hours per week on social media for 99.7% of college students is from ______________ to ______________.</li>
+<p class="solution">17 to 47 hours</p>
+<li>In a sample of 1000 college students, how many would be expected to spend between 27 and 37 hours each week on social media?</li>
+<p class="solution">\(0.68 \cdot 1000 = 680\) college students</p>
+
+<li>In a sample of 1000 college students, how many would be expected to spend more than 47 hours week on social media? </li>
+<p class="solution">\(0.0015 \cdot 1000 = 1.5\)</p>
+<p class="solution">About 2 of the 1000 college students would be expected to be on social media each week for more than 47 hours..</p>
+
+</ol>
+
+</li>
     </ol>
 
     </main>
